# maecs

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
compile_time/: CMakeLists.txt  compile_time.cpp
compile_time/include/compile_time/: compile_time.hpp
ecs_app/: CMakeLists.txt  main.cpp
maecs/: CMakeLists.txt  maecs.cpp
maecs/include/maecs/: maecs.hpp
tests/: CMakeLists.txt  main.cpp
tests/registry_tests/: CMakeLists.txt  registry_tests.cpp
